# openartbrowser

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc  .travis.yml  LICENSE  LanguageConfig.csv  README.md  docker-compose.yml  jsontest.sh  package-lock.json
app/: README.md  (+7 more)
etl/: .gitignore  Dockerfile  README.md  docker_elastic.bat  docker_elastic.sh  elasticsearch.yml  main.py  pyproject.toml  requirements.txt  setup.py  user-config.py
etl/data_enhancement/: README.md  add_youtube_videos.py  estimate_movement_period.py  has_part_part_of_enhancement.py  ranking.py  script_artworks_rank.js  script_genres_rank.js  script_locations_rank.js  script_materials_rank.js  split_languages.py  youtube_videos.csv
etl/data_extraction/: README.md  constants.py  dict_utils.py  get_wikidata_items.py  get_wikipedia_extracts.py  load_wd_entities.py  map_wd_attribute.py  map_wd_response.py  map_wd_response_to_oab_model.py  request_utils.py  tif_substitute.py
etl/data_manipulation/: README.md  add_youtube_videos.py  estimate_movement_period.py  package-lock.json  script_artist_rank.js  script_artworks_rank.js  split_languages.py
etl/generate_rdf/: art_ontology_header.txt  generate_rdf.py
etl/scripts/: README.md  data_extraction_statistics.sh  etl.sh  install_etl.bat  install_etl.sh  run_etl.bat  run_etl.sh  run_update_production.sh  update_elasticsearch_production_from_staging.sh  upload_to_local_elastic.sh
etl/shared/: blocklist.py  constants.py  languageconfig.csv  utils.py
etl/upload_to_elasticsearch/: README.md  elasticsearch_helper.py  server_elasticsearch.yml
(+403 files in other folders)
